--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -62,10 +62,11 @@
   display: flex;
   flex-direction: column;
   background-color: #0B3C5D;
-  border: .25em #1D2731 solid;
+  border: .15em #1D2731 solid;
 }
 
 .search-item-parent:hover {
+  cursor: pointer;
   margin: .25em;
   padding: .25em;
   /* background: lightgrey; */
@@ -76,7 +77,7 @@
   flex-direction: column;
   background-color: #328CC1;
   color: #1D2731;
-  border: .25em #D9B310 solid;
+  border: .15em #D9B310 solid;
 }
 
 .search-item-parent:hover div {
