--- a/frontend/public/css/search_results.css
+++ b/frontend/public/css/search_results.css
@@ -92,24 +92,25 @@
 }
 
 .search-result-query-tags-list-item {
-  /* float: left; */
-  /* display: inline; */
-  /* background-color: ivory; */
-  cursor: pointer;
-  background-color: #1D2731;
-  color: ivory;
-  padding: .25em .5em;
-  margin: .25em;
-  border-color: #1D2731;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: .25em;
-  /* font-family: Arial, Helvetica, sans-serif; */
-  font-size: 1em;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items:center;
+    /* float: left; */
+    /* display: inline; */
+    /* background-color: ivory; */
+    cursor: pointer;
+    background-color: #1D2731;
+    color: ivory;
+    padding: .25em .5em;
+    margin: .25em;
+    border-color: #1D2731;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: .25em;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-size: 1em;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items:center;
+    /* transition-duration: .3s; */
 }
 
 .search-result-query-tags-list-item:hover {
@@ -119,6 +120,7 @@
     background-color: #328CC1;
     border-color: #D9B310;
 }
+
 .search-result-query-tags-list-item:hover div {
   /* background-color: #1D2731; */
   /* color: ivory; */
@@ -184,6 +186,7 @@
     border: .25em solid #1D2731;
     border-radius: 5px;
     margin: 1em;
+    transition-duration: 0.3s;
 }
 
 .top-three-row li:hover {
