--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -138,6 +138,111 @@ input[type="submit"] {
     justify-content: flex-start;
 }
 
+
+/* Dropdown Button */
+.dropbtn {
+  /* background-color: #3498DB; */
+  /* color: white; */
+  padding: .5em;
+  /* font-size: 16px; */
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  /* background-color: #2980B9; */
+}
+
+
+.dropbtn {
+    background-color: #1D2731;
+    cursor: pointer;
+    /* padding: 4px 10px; */
+    /* margin: 5px 5px; */
+    /* border: 1px solid #1D2731; */
+    /* border-radius: 5px; */
+    /* font-size: 1em; */
+    /* font-weight: 800; */
+    color: ivory;
+    /* transition-duration: 0.3s; */
+    border: 1px solid #1D2731;
+    
+}
+
+.dropbtn:hover {
+    background-color: #0B3C5D;
+    /* background-color: yellow; */
+    color: #D9B310;
+    /* color: #263d5f; */
+    border: none;
+    /* outline-color: #D9B310;
+    outline-style: solid;
+    outline-width: 2px; */
+    border: 1px solid #D9B310;
+}
+
+.dropbtn:focus {
+    /* border: 1px solid #D9B310; */
+    /* background-color: #328CC1; */
+    /* color: #1D2731; */
+
+    /* color: #263d5f; */
+    outline: none;
+
+    /* TODO on click toggle */
+    /* border: 1px solid #D9B310; */
+
+}
+
+.dropbtn-svg {
+    width: 2em;
+    height: 2em;
+}
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    background: transparent;
+  /* position: relative; */
+  /* display: inline-block; */
+  align-self: flex-start;
+
+  /* overflow: hidden; */
+  position: fixed;
+  top: 0; 
+  display: block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  /* background-color: #f1f1f1; */
+  /* min-width: 160px; */
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content button {
+  /* color: black; */
+  /* padding: 12px 16px; */
+  /* text-decoration: none; */
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content button:hover {
+    /* background-color: #ddd */
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display:block;
+}
+
+
 .radio-inputs {
     display: flex;
     justify-content: space-around;
