--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -143,10 +143,11 @@ input[type="submit"] {
 .dropbtn {
   /* background-color: #3498DB; */
   /* color: white; */
-  padding: .5em;
+  padding: 0em;
+  margin: 0em;
   /* font-size: 16px; */
-  border: none;
-  cursor: pointer;
+  /* border: none; */
+  /* cursor: pointer; */
 }
 
 /* Dropdown button on hover & focus */
@@ -156,7 +157,7 @@ input[type="submit"] {
 
 
 .dropbtn {
-    background-color: #1D2731;
+    background-color: transparent;
     cursor: pointer;
     /* padding: 4px 10px; */
     /* margin: 5px 5px; */
@@ -166,12 +167,13 @@ input[type="submit"] {
     /* font-weight: 800; */
     color: ivory;
     /* transition-duration: 0.3s; */
-    border: 1px solid #1D2731;
+    /* border: 1px solid #1D2731; */
+    border: none;
     
 }
 
 .dropbtn:hover {
-    background-color: #0B3C5D;
+    background-color: transparent;
     /* background-color: yellow; */
     color: #D9B310;
     /* color: #263d5f; */
@@ -179,7 +181,7 @@ input[type="submit"] {
     /* outline-color: #D9B310;
     outline-style: solid;
     outline-width: 2px; */
-    border: 1px solid #D9B310;
+    /* border: 1px solid #D9B310; */
 }
 
 .dropbtn:focus {
@@ -189,15 +191,15 @@ input[type="submit"] {
 
     /* color: #263d5f; */
     outline: none;
-
+    background-color: transparent;
     /* TODO on click toggle */
     /* border: 1px solid #D9B310; */
 
 }
 
 .dropbtn-svg {
-    width: 2em;
-    height: 2em;
+    width: 2.5em;
+    height: 2.5em;
 }
 
 
@@ -212,6 +214,7 @@ input[type="submit"] {
   position: fixed;
   top: 0; 
   display: block;
+  margin: .75em 0em 0em .75em;
 }
 
 /* Dropdown Content (Hidden by Default) */
