--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -222,9 +222,9 @@ input[type="submit"] {
   display: none;
   position: absolute;
   /* background-color: #f1f1f1; */
-  /* min-width: 160px; */
+  min-width: 10em;
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-  z-index: 1;
+  z-index: 100;
 }
 
 /* Links inside the dropdown */
