--- a/frontend/public/css/search_results.css
+++ b/frontend/public/css/search_results.css
@@ -41,7 +41,7 @@
     flex-wrap: wrap;
     /* border-bottom: #1D2731 2px solid; */
     /* padding: 0em 22em; */
-    width: 66%
+    width: 75%
 }
 
 .search-result-save-container {
@@ -111,6 +111,7 @@
 .search-result-query-tags {
     padding: 0em;
     /* border-bottom: #1D2731 2px solid; */
+    width: 66%;
 }
 
 .search-result-query-tags-list {
@@ -268,7 +269,7 @@
 }
 
 .top-three-row li {
-    flex-basis: 27%;
+    /* flex-basis: 27%; */
     display: inline-block;
     background-color: ivory;
     top: 5em;
