--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -233,6 +233,25 @@ input[type="submit"] {
   /* padding: 12px 16px; */
   /* text-decoration: none; */
   display: block;
+  margin: .25em 0em;
+}
+
+.dropdown-content div {
+  /* color: black; */
+  /* padding: 12px 16px; */
+  /* text-decoration: none; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown-content div button {
+  margin: .25em 0em;
+}
+
+.dropdown-content * {
+    width: 100%;
 }
 
 /* Change color of dropdown links on hover */
