--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -337,3 +337,29 @@ input[type="submit"] {
     text-align: right;
     text-shadow:0px 1px 0px gray;
 }
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 0em;
+  right: 0em;
+  z-index: 99;
+  border: none;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: ivory;
+  cursor: pointer;
+  padding: 0em;
+  margin: 0em .75em .75em 0em;
+}
+
+#myBtn:hover {
+  color: #D9B310;
+}
+
+.myBtn_icon {
+    width: 2.5em;
+    height: 2.5em;
+}
