--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -46,7 +46,8 @@
 
 .search-items-index {
   /* max-width: 100%; */
-  min-width: 75%;
+  max-width: 75%;
+  min-width: 66%;
   display: flex;
   flex-direction: column;
   align-items: center;
