--- a/frontend/public/css/search_results.css
+++ b/frontend/public/css/search_results.css
@@ -262,7 +262,7 @@
     flex-wrap: wrap;
     margin: auto;
     text-align: center;
-    max-width: 80%;
+    max-width: 81%;
     /* columns: 3; */
     /* display: grid; */
     /* grid-template-columns: 1fr 1fr 1fr; */
@@ -270,7 +270,11 @@
 
 .top-three-row li {
     /* flex-basis: 27%; */
-    display: inline-block;
+    /* display: inline-block; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: ivory;
     top: 5em;
     text-align: center;
@@ -278,6 +282,8 @@
     border-radius: 5px;
     margin: 1em;
     transition-duration: 0.3s;
+    /* max-width:24%; */
+    /* background-color: black; */
 }
 
 .top-three-row li:hover {
@@ -296,9 +302,45 @@
 
 .watch-photo {
     width: 18em;
-    height: 28em;
+    height: 27em;
     object-fit: cover;
 }
+
+@media only screen and (max-width: 801px) {
+  .watch-photo {
+    width: 12em;
+    height: 18em;
+  }
+}
+
+@media only screen and ( min-width:802px ) and ( max-width: 1699px ) {
+  .watch-photo {
+    width: 15em;
+    height: 22.5em;
+  }
+}
+
+.watch-list-photo-container {
+    /* flex-grow: 10; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden */
+    /* height: 40vh; */
+    /* min-width: 18vh; */
+    /* max-width: 18vh; */
+    /* min-height: 100%; */
+    /* min-height: 27vh; */
+    /* max-height: 27vh; */
+
+    /* width: 100%; */
+    /* max-width: 18vw; */
+    /* height: auto; */
+    /* background-size: cover; */
+    /* background-color: black; */
+    /* width: 33%; */
+ }
 
 .modal-background {
   position: fixed;
