Add text resizing to results show component

--- a/frontend/public/css/search_results.css
+++ b/frontend/public/css/search_results.css
@@ -280,10 +280,11 @@
     text-align: center;
     border: .25em solid #1D2731;
     border-radius: 5px;
-    margin: 1em;
+    margin: .5em;
     transition-duration: 0.3s;
     /* max-width:24%; */
     /* background-color: black; */
+    max-width: 18em;
 }
 
 .top-three-row li:hover {
@@ -292,11 +293,11 @@
 }
 
 .top-three-row li:hover img {
-    border-bottom: .2em solid #D9B310;
+    /* border-bottom: .2em solid #D9B310; */
 }
 
 .top-three-row img {
-    border-bottom: .15em solid #1D2731;
+    /* border-bottom: .15em solid #1D2731; */
     /* border-radius: 5px; */
 }
 
@@ -304,20 +305,6 @@
     width: 18em;
     height: 27em;
     object-fit: cover;
-}
-
-@media only screen and (max-width: 801px) {
-  .watch-photo {
-    width: 12em;
-    height: 18em;
-  }
-}
-
-@media only screen and ( min-width:802px ) and ( max-width: 1699px ) {
-  .watch-photo {
-    width: 15em;
-    height: 22.5em;
-  }
 }
 
 .watch-list-photo-container {
@@ -340,7 +327,18 @@
     /* background-size: cover; */
     /* background-color: black; */
     /* width: 33%; */
+    border-bottom: .15em solid #1D2731;
+    margin-bottom: .25em;
  }
+
+ .top-three-row li:hover .watch-list-photo-container {
+    border-bottom: .15em solid #D9B310;
+ }
+
+.watch-list-photo-detail {
+    padding: 0em 0em .25em 0em;
+    font-size: 1em;
+}
 
 .modal-background {
   position: fixed;
@@ -354,4 +352,31 @@
 
 .hidden {
     display: none;
+}
+
+@media only screen and ( min-width:802px ) and ( max-width: 1699px ) {
+    .watch-photo {
+        width: 15em;
+        height: 22.5em;
+    }
+
+    .top-three-row li {
+        max-width: 15em;
+    }
+    .watch-list-photo-detail  {
+        font-size: .85em;
+    }
+}
+
+@media only screen and (max-width: 801px) {
+    .watch-photo {
+        width: 12em;
+        height: 18em;
+    }
+    .top-three-row li {
+        max-width: 12em;
+    }
+    .watch-list-photo-detail  {
+        font-size: .8em;
+    }
 }
