--- a/frontend/public/css/search_main_page.css
+++ b/frontend/public/css/search_main_page.css
@@ -29,7 +29,7 @@ a {
     color: ivory;
 }
 
-button {
+/* button {
     background-color: #1D2731;
     cursor: pointer;
     padding: 4px 10px;
@@ -37,31 +37,19 @@ button {
     border: 1px solid #1D2731;
     border-radius: 5px;
     font-size: 1em;
-    /* font-weight: 800; */
     color: ivory;
     transition-duration: 0.3s;
-    
-}
+} */
 
-button:hover {
+/* button:hover {
     background-color: #0B3C5D;
-    /* background-color: yellow; */
     color: #D9B310;
-    /* color: #263d5f; */
     border: 1px solid #D9B310;
-    /* outline-color: #D9B310;
-    outline-style: solid;
-    outline-width: 2px; */
-}
+} */
 
-button:focus {
-    /* border: 1px solid #D9B310; */
-    /* background-color: #328CC1; */
-    /* color: #1D2731; */
-
-    /* color: #263d5f; */
+/* button:focus {
     outline: none;
-}
+} */
 
 footer {
     text-align: right;
@@ -169,14 +157,20 @@ input[type="submit"] {
     /* transition-duration: 0.3s; */
     /* border: 1px solid #1D2731; */
     border: none;
-    
+
+    background-color: #1D2731;
+    cursor: pointer;
+    padding: 4px 10px;
+    border: 1px solid #1D2731;
+    border-radius: 5px;
+    font-size: 1em;
+    color: ivory;
+    transition-duration: 0.3s;
 }
 
 .dropbtn:hover {
     background-color: transparent;
-    /* background-color: yellow; */
     color: #D9B310;
-    /* color: #263d5f; */
     border: none;
     /* outline-color: #D9B310;
     outline-style: solid;
@@ -353,6 +347,10 @@ input[type="submit"] {
   cursor: pointer;
   padding: 0em;
   margin: 0em .75em .75em 0em;
+
+  border-radius: 5px;
+  font-size: 1em;
+  transition-duration: 0.3s;
 }
 
 #myBtn:hover {
