--- a/frontend/public/css/watch_show_modal.css
+++ b/frontend/public/css/watch_show_modal.css
@@ -112,11 +112,23 @@
   font-size: 14px;
   line-height: 18px;
   background: #fff;
+
+  cursor: pointer;
+  margin: 5px 5px;
+  color: ivory;
+  transition-duration: 0.3s;
 }
 
 .new-review-button:hover {
   cursor: pointer;
   background: lightgray;
+
+  color: #D9B310;
+  border: 1px solid #D9B310;
+}
+
+.new-review-button:focus {
+  outline: none;
 }
 
 .owned-review {
@@ -260,11 +272,23 @@
   margin-top: 10px;
   font-size: 14px;
   line-height: 18px;
+
+  cursor: pointer;
+  margin: 5px 5px;
+  color: ivory;
+  transition-duration: 0.3s;
 }
 
 .update-review-button:hover {
   cursor: pointer;
   background: rgb(168, 168, 168);
+  
+  color: #D9B310;
+  border: 1px solid #D9B310;
+}
+
+.update-review-button:focus {
+  outline: none;
 }
 
 .show {
