--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 .profile-page-container {
   background-color: #414348;
   min-height:100vh;
@@ -18,8 +20,8 @@
   font-size: 24px;
   /* line-height: 20px; */
   /* font-weight: 200; */
-  color: ivory;
-  background: #1D2731;
+  color: $color-1;
+  background: $color-5;
   border-radius: 4px;
   width: 45%;
   margin-top: 2em;
@@ -40,8 +42,8 @@
   /* padding-bottom: 12px; */
   width: 33%;
   text-align: center;
-  color: ivory;
-  background-color: #1D2731;
+  color: $color-1;
+  background-color: $color-5;
 }
 
 .search-items-index {
@@ -62,8 +64,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #1D2731;
-  border: .15em #1D2731 solid;
+  background-color: $color-5;
+  border: .15em $color-5 solid;
 }
 
 .search-item-parent:hover {
@@ -76,27 +78,27 @@
   /* width: 66%; */
   display: flex;
   flex-direction: column;
-  background-color: #0B3C5D;
-  color: #D9B310;
-  border: .15em #D9B310 solid;
+  background-color: $color-4;
+  color: $color-2;
+  border: .15em $color-2 solid;
 }
 
 .search-item-parent:hover div {
-  background-color: #0B3C5D;
-  color: #D9B310;
+  background-color: $color-4;
+  color: $color-2;
 }
 
 .search-item-parent:hover li {
-  /* background-color: #1D2731; */
-  /* color: ivory; */
-  color: #D9B310;
-  background-color: #1D2731;
+  /* background-color: $color-5; */
+  /* color: $color-1; */
+  color: $color-2;
+  background-color: $color-5;
 }
 
 .search-item-header {
   background-color: transparent;
   /* border: none; */
-  color: ivory;
+  color: $color-1;
   padding: .5em .5em;
   text-align: center;
   /* text-decoration: none; */
@@ -120,10 +122,10 @@
   width: 1.2em;
   margin: 0px;
   padding: 0px;
-  /* background-color: #0B3C5D; */
+  /* background-color: $color-4; */
   border: 0px;
   border-radius: 0px;
-  color: ivory;
+  color: $color-1;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -136,7 +138,7 @@
 
 .profile-search-delete-icon:hover {
   /* color: white; */
-  color: ivory;
+  color: $color-1;
   /* background-color: white; */
 }
 
@@ -144,7 +146,7 @@
   background-color: transparent;
   padding: .5em;
   /* margin: .25em; */
-  /* background-color: #0B3C5D; */
+  /* background-color: $color-4; */
 }
 
 .search-item-details-list {
@@ -154,12 +156,12 @@
 .search-item-details-list-item {
   float: left;
   /* display: inline; */
-  /* background-color: ivory; */
-  background-color: #0B3C5D;
-  color: ivory;
+  /* background-color: $color-1; */
+  background-color: $color-4;
+  color: $color-1;
   padding: .25em .5em;
   margin: .25em;
-  border-color: #0B3C5D;
+  border-color: $color-4;
   border-width: 1px;
   border-style: solid;
   border-radius: .25em;
