--- a/frontend/src/styles/search_main_page.scss
+++ b/frontend/src/styles/search_main_page.scss
@@ -151,13 +151,14 @@ input[type="submit"] {
     /* margin: 5px 5px; */
     /* border: 1px solid #1D2731; */
     /* border-radius: 5px; */
-    /* font-size: 1em; */
+    font-size: 1em;
     /* font-weight: 800; */
     color: ivory;
     /* transition-duration: 0.3s; */
     /* border: 1px solid #1D2731; */
     border: none;
 
+    padding: 0em;
     transition-duration: 0.3s;
 }
 
@@ -212,7 +213,7 @@ input[type="submit"] {
   min-width: 11em;
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 100;
-  opacity: 90%;
+  opacity: .90;
 }
 
 /* Links inside the dropdown */
