--- a/frontend/src/styles/search_results.scss
+++ b/frontend/src/styles/search_results.scss
@@ -79,6 +79,7 @@
     border-radius: .25em;
     font-size: 1em;
     transition-duration: 0.3s;
+    max-width: 75%;
 }
 
 .search-result-save-input:hover {
@@ -459,5 +460,17 @@
     .alert {
       height: 6vh;
       font-size: 1.25em;
+    }
+
+    .search-result-query-tags-list-sort-button {
+        width: 75%;
+    }
+
+    .search-result-query-tags, .search-result-query-tags-sort {
+        width: 100%;
+    }
+
+    .search-result-query-tags-list-sort {
+        width: 90%;
     }
 }
